spanish food, places and fashion

--- a/food.html
+++ b/food.html
@@ -381,29 +381,152 @@
             <!-- Spanish food starts here-->
             <div class="w3-row-padding">
                 <div class="w3-third w3-container w3-margin-bottom Spanish">
-                    <img src="https://estaticos.muyinteresante.es/media/cache/760x570_thumb/uploads/images/article/55365cd73787b2187a1f0790/portada.jpg" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spFood1.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
+                        <p><b>Paella</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
                         <p>
-                            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                            From Valencia. This dish it's made in a big pan with rice, vegetables, olive oil and meat or fish. 
                         </p>
                     </div>
                 </div>
                 <div class="w3-third w3-container w3-margin-bottom Spanish">
-                    <img src="https://estaticos.muyinteresante.es/media/cache/760x570_thumb/uploads/images/article/55365cd73787b2187a1f0790/portada.jpg" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spFood2.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
+                        <p><b>Tortilla española</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
                         <p>
-                            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                            This dish it's made mainly with potates and eggs. Some prefer it with onion others not.
                         </p>
                     </div>
                 </div>
                 <div class="w3-third w3-container Spanish">
-                    <img src="https://estaticos.muyinteresante.es/media/cache/760x570_thumb/uploads/images/article/55365cd73787b2187a1f0790/portada.jpg" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spFood3.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
+                        <p><b>Cocido madrileño</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
                         <p>
-                            hi tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                            This dish it's made with chickpeas, noodle soup, meat, potatoes, carrot and leeks.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood4.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Jamón serrano</b></p>
+                        <p class="w3-opacity"><i>Category:Starter</i></p>
+                        <p>
+                            It is one of the most globally recognized food items of Spanish cuisine.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood5.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Gazpacho</b></p>
+                        <p class="w3-opacity"><i>Category:Starter</i></p>
+                        <p>
+                            From Andalucía. It's a cold soup made of raw, blended vegetables.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood6.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Salmorejo</b></p>
+                        <p class="w3-opacity"><i>Category:Starter</i></p>
+                        <p>
+                            From Andalucía. It's a purée consisting of tomato and bread.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood7.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Pulpo a la gallega</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
+                        <p>
+                            From Galicia. This dish is prepared by first boiling the octopus inside a copper cauldron.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood8.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Calamares a la romana</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
+                        <p>
+                            It's prepared with battered fried squid.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood9.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Croquetas</b></p>
+                        <p class="w3-opacity"><i>Category:Side dish</i></p>
+                        <p>
+                            It's a small cylinder of food consisting of a thick binder made with bechamel combined with a filling, which is breaded and deep-fried.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood10.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Churros con chocolate</b></p>
+                        <p class="w3-opacity"><i>Category:Breakfast</i></p>
+                        <p>
+                            It's a type of fried dough, they can either be thin (and sometimes knotted) or long and thick, where they are known as porras.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood11.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Tarta de Santiago</b></p>
+                        <p class="w3-opacity"><i>Category:Dessert</i></p>
+                        <p>
+                            From Galicia. It's an almond cake with origin in the Middle Ages.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood12.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Arroz con leche</b></p>
+                        <p class="w3-opacity"><i>Category:Dessert</i></p>
+                        <p>
+                            A dish made from rice mixed with water or milk and other ingredients such as cinnamon, vanilla and raisins.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood13.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Cerveza</b></p>
+                        <p class="w3-opacity"><i>Category:Beverage</i></p>
+                        <p>
+                            A common drink produced throughout the country.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood14.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Vino español</b></p>
+                        <p class="w3-opacity"><i>Category:Beverage</i></p>
+                        <p>
+                            It includes red, white, and sparkling wines produced throughout the country.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFood15.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Aceite de oliva VE</b></p>
+                        <p class="w3-opacity"><i>Category:Food dressing</i></p>
+                        <p>
+                            It's a liquid fat obtained from olives.
                         </p>
                     </div>
                 </div>
