--- a/place.html
+++ b/place.html
@@ -255,30 +255,93 @@
             <!-- Third Photo Grid-->
             <div class="w3-row-padding">
                 <div class="w3-third w3-container w3-margin-bottom Spanish">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spPlace1.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
-                        <p>
-                            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
+                        <p><b>Palacio Real, Madrid</b></p>
                     </div>
                 </div>
                 <div class="w3-third w3-container w3-margin-bottom Spanish">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spPlace2.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
-                        <p>
-                            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
+                        <p><b>Catedral de Santiago de Compostela</b></p>
                     </div>
                 </div>
                 <div class="w3-third w3-container Spanish">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spPlace3.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
-                        <p>
-                            hi tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
+                        <p><b>"La Isla Bonita", La Palma</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace4.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Islas Cíes, Pontevedra</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace5.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>La Alhambra, Granada</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace6.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Casco antiguo, Córdoba</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace7.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Catedral de Burgos</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace8.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Basílica del Pilar, Zaragoza</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace9.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Bardenas Reales, Navarra</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace10.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>La Gomera, Islas Canarias</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace11.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Museo Guggenheim, País Vasco</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace12.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Ciudad de las Artes y las Ciencias, Valencia</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace13.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Cuevas de Altamira, Cantabria</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace14.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Molinos de Viento de Consuegra, Toledo</b></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spPlace15.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Parque Nacional de los Picos de Europa</b></p>
                     </div>
                 </div>
             </div>
