--- a/fashion.html
+++ b/fashion.html
@@ -299,30 +299,87 @@
             <!-- Spanish Fashion starts here-->
             <div class="w3-row-padding">
                 <div class="w3-third w3-container w3-margin-bottom Spanish">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spFashion1.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
-                        <p>
-                            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
+                        <p><b>Sevillana</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
                     </div>
                 </div>
                 <div class="w3-third w3-container w3-margin-bottom Spanish">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spFashion2.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
-                        <p>
-                            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
+                        <p><b>Flamenca</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
                     </div>
                 </div>
                 <div class="w3-third w3-container Spanish">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/spFashion3.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Spanish</b></p>
-                        <p>
-                            hi tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
+                        <p><b>Mantón de Manila</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion4.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Chulapo</b></p>
+                        <p class="w3-opacity"><i>Category:Men</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion5.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Chulapa</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion6.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>San Fermín</b></p>
+                        <p class="w3-opacity"><i>Category:Men</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion7.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>San Fermín</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion8.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Ibicenco</b></p>
+                        <p class="w3-opacity"><i>Category:Men</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion9.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Ibicenca</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion10.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Fallero</b></p>
+                        <p class="w3-opacity"><i>Category:Men</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion11.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Fallera</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Spanish">
+                    <img src="img/spFashion12.png" alt="Fashion" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Huertanos</b></p>
+                        <p class="w3-opacity"><i>Category:Men&Women</i></p>
                     </div>
                 </div>
             </div>
